kubernetes/local-mac/task-006-access-svc-clusterip-via-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
    - host: "testingress.com"
      http:
        paths:
          - pathType: Prefix
            path: "/whoami"
            backend:
              service:
                name: whoami-dep-svc
                port:
                  number: 80
